# ros-repo-4

./: README.md
aruco_detect_v0.1/tcp_camera/: tcpsocket.py
aruco_detect_v0.1/turtles_service/: CMakeLists.txt  setup.py
aruco_detect_v0.1/turtles_service/turtles_service/: move_coordinate.py
aruco_detect_v0.1/turtles_service_msgs/: CMakeLists.txt  package.xml
aurco_detect/: package.xml  setup.py
aurco_detect/srv/: NavigateTo.srv
aurco_detect/turtles_service/: aruco1.py  nav_service.py
domain_bridge_ws/src/: CMakeLists.txt  package.xml
main/: DBManager.py  OLD_Turtles.ui  README.MD  Turtles.py  Turtles.ui  YamlFileManager.py  config.yaml  faces_model.yml  map_turtles_3.yaml  task.yaml
main/captures/: Entrance_20240612_203319.avi  Entrance_20240612_204358.avi
maps/: map2.pgm  map2.yaml  map_turtles.pgm  map_turtles.yaml  map_turtles_2.pgm  map_turtles_2.yaml  map_turtles_3.pgm  turtle_map.pgm  turtle_map.yaml
nav_aruco_service/: requirements.txt  service_list
nav_aruco_service/turtles_service/: package.xml  setup.cfg  setup.py
nav_aruco_service/turtles_service_msgs/: CMakeLists.txt  README.MD  package.xml
nav_aruco_service/turtles_service_msgs/srv/: ArucoNavigateTo.srv
nav_aruco_service_v2/: MultiMatrix.npz  tcpsocket.py  test_server.py
nav_aruco_service_v2/turtles_service/: CMakeLists.txt  setup.py
nav_aruco_service_v3/: tcpsocket.py
nav_aruco_service_v3/turtles_service/: setup.py
nav_aruco_service_v3/turtles_service_msgs/: CMakeLists.txt
nav_aruco_service_v3/turtles_service_msgs/action/: ActionClientResult.msg
nav_aruco_service_v3/turtles_service_msgs/srv/: ArucoNavigateTo.srv  NavToPose.srv
raspy/src/: README.MD  servo_test.py  socket_client.py  socket_client_servo.py
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
test/check_remain_feed/: capture.ipynb  check_remained_feed.ipynb  yolo_apply.ipynb  yolo_apply.py
test/client_connect/: client.py
test/color_map/: colormap_test.py
test/color_test/: blue_mask.py  opencv_color.py  red_maks.py
test/control_servo_test/: README.md  raspControlServo.py
test/draw_cow_position/: test_draw.py
test/encryption_test/: README.MD  encryption_test.py  tag_test.py  test_seperate1.py  test_seperate2.py
test/laser_test/: laser_tongsin.py  maunal
test/log_test/: log_read_test.py  logging_test.py
test/mediaPipe_test/: test.py
turtles_service/: README.MD  package.xml  setup.py
turtles_service_msgs/: CMakeLists.txt  README.MD  package.xml
(+164 files in other folders)
